syntax = "proto3";

option csharp_namespace = "NexusServergRPC";

package nexusdb;

service NexusDb{
    rpc SignUpUser(stream SignUpRequest) returns (stream SignUpResponse);

    rpc LoginUser(stream LoginUserRequest) returns (stream LoginUserResponse);

    rpc LogOutUser(LogOutRequest) returns (LogOutResponse);

    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

    rpc RetrieveToken(RetrieveTokenRequest) returns (RetrieveTokenResponse);

    rpc GetContacts(GetContactsRequest) returns (GetContactsResponse);
}

message MessageX{
    string MsgText = 1;
    bytes ExtraContent = 2;
    string SenderName = 3;
    string ReceiverName = 4;
}

message GetContactsRequest{
    string UserName = 1;
}

message ContactX{
     string UserName = 1;
     string LastMessage = 2;
     bytes UserAvatar = 3;
}

message GetContactsResponse{
    repeated ContactX contact_list = 1;
}

message ValidateTokenRequest{
    string token = 1;
}

message ValidateTokenResponse{
    string token = 1;
}

message RetrieveTokenRequest{
    string UserName = 1;
}

message RetrieveTokenResponse{
    string UserName = 1;
}


message LogOutRequest{
    string UserName = 1;
}

message LogOutResponse{
    bool Response = 1;
}

message LoginUserRequest{
    string UserName = 1;
    string UserPassword = 2;
}

message LoginUserResponse{
    string ResponseMessage = 1;
    bool Response = 2;
    bytes UserAvatar = 3;
    MessageX message = 4;
}

message SignUpRequest{
    string UserName = 1;
    string UserEmail = 2;
    string UserPassword = 3;
}

message SignUpResponse{
    string ResponseMessage = 1;
    bool Response = 2;
}